--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 }
 
 .discord-button {
-    background-color: #db1717;
+    background-color: #596cc2;
     /* Cor de fundo do Discord */
     color: white;
     padding: 10px 20px;
